[package]
name = "wallter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
hex = "0.4.3"
image = "0.24.5"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = 3
